--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ En este contexto,Mexico es el hogar de 102 especies endemicas,es decir,que casi 
 <form action="mailto:pericopter67@gmail.com" method="get">
 <center><h1>Encuesta</h1>
 1._¿Que te parecio el contenido?
-<select name= opinion>
+<select name=opinion>
 <option> Exelente
 <option> Muy Bueno
 <option> Bueno
@@ -117,12 +117,12 @@ En este contexto,Mexico es el hogar de 102 especies endemicas,es decir,que casi 
 </select>
 <br>
 <p>2.¿Te fue util la informacion?: <br>
-<input type= checkbox name= si> Si
-<input type= checkbox name= no> No
-<input type= checkbox name= mas o menos> Mas o menos
+<input type= checkbox name=si> Si
+<input type= checkbox name=no> No
+<input type= checkbox name=mas o menos> Mas o menos
 <br>
 <p>3._Del 1 al 10 ¿Cuanto te gusto? Tomando en cuenta que 10 es mucho
-<select name= opinion>
+<select name=opinion>
 <option> 1 
 <option> 2
 <option> 3
@@ -136,31 +136,31 @@ En este contexto,Mexico es el hogar de 102 especies endemicas,es decir,que casi 
 </select>
 <br>
 <p>4._¿Como te enteraste de la pagina?
-<select name= enterar>
+<select name=enterar>
 <option> Por un conocido
 <option> Me la recomendaron
 <option> En internet
 </select>
 <br>
 <p>5._Visualmente ¿Te llama la atencion? <br>
-<input type= checkbox name= mucho> Mucho
-<input type= checkbox name= poco> Poco
-<input type= checkbox name= muy poco> Muy Poco
-<input type= checkbox name= nada>Nada
+<input type= checkbox name=mucho> Mucho
+<input type= checkbox name=poco> Poco
+<input type= checkbox name=muy poco> Muy Poco
+<input type= checkbox name=nada>Nada
 <br>
 <p>6._¿Te fue facil seguir el orden de la informacion? <br>
-<input type= checkbox name= si> Si
-<input type= checkbox name= no> No
-<input type= checkbox name= mas o menos> Mas o menos
+<input type= checkbox name=si> Si
+<input type= checkbox name=no> No
+<input type= checkbox name=mas o menos> Mas o menos
 <br>
 <p>7._¿Recomendarias esta pagina con tus conocidos? <br>
-<input type= checkbox name= si> Si
-<input type= checkbox name= no> No
-<input type= checkbox name= talvez> Talvez
+<input type= checkbox name=si> Si
+<input type= checkbox name=no> No
+<input type= checkbox name=talvez> Talvez
 <br>
 <br>
 8._¿Por que?<br>
-<textarea name= Necesidad rows?= 5 cols= 40 wrap= virtual>
+<textarea name=porque rows?=5 cols= 40 wrap=virtual>
 </textarea>
 <br>
 <div class="button">
