--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ dos alas y capacidad de volar.<br>
 de las extremidades superiores, las alas en las aves, deben de ser fuertes y a la vez flexibles. Lo cual requiere que el esternón, hueso en el pecho donde se unen las costillas <br>
 , sea en forma de quilla; y por eso también se les llaman Aves Carenadas.<br>
 </ol>
-<a href="https://escuadron13.github.io/Proyecto/index.html#menu">Volver al Inicio</a><br>
+<a href="#menu">Volver al Inicio</a><br>
 <hr size="10px;"size="6px;"color="blue" align="center" width="100%">
 <a name="extincion"></a>
 <center><p style="color:red;">¿Que es una especie en extincion?</p></center>
@@ -48,7 +48,7 @@ de las extremidades superiores, las alas en las aves, deben de ser fuertes y a l
 Esto se puede deber tanto a la depredación directa sobre la especie como a la desaparición de un recurso del cual depende su vida, tanto por la acción del hombre<br>
 , debido a cambios en su hábitat, como producto de desastres naturales, o por cambios graduales del clima.<br>
 <p>Conoce mas acerca de que es una especie en extincion <a href="https://es.wikipedia.org/wiki/Especie_en_peligro_de_extinci%C3%B3n" target="blank">Aqui</a>
-<a href="https://escuadron13.github.io/Proyecto/index.html#menu">Volver al Inicio</a><br>
+<a href="#menu">Volver al Inicio</a><br>
 <hr size="10px;"size="6px;"color="pink" align="center" width="100%">
 <a name="mexico"></a>
 <center><p style="color:green;">Introduccion a las aves de Mexico.<br></center>
@@ -73,7 +73,7 @@ En este contexto,Mexico es el hogar de 102 especies endemicas,es decir,que casi 
 </table>
 <center><p>Aqui te dejamos un video donde podras conocer otras 6 aves en peligro de extincion.</center>
 <iframe width="1583" height="609" src="https://www.youtube.com/embed/aLVbidXnv4M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-<a href="https://escuadron13.github.io/Proyecto/index.html#menu">Volver al Inicio</a><br>
+<a href="#menu">Volver al Inicio</a><br>
 <hr size="10px;"size="6px;"color="purple" align="center" width="100%">
 <a name="causas"></a>
 <center><p style="color:green">Causas y Consecuencias </center>
@@ -81,7 +81,7 @@ En este contexto,Mexico es el hogar de 102 especies endemicas,es decir,que casi 
 <p>La principal causa de extinción como especies, es el factor humano, ya que ha causado la destrucción de habitas, y además es el culpable de capturas ilegales, cazas ilegales, introducción de especies exóticas, captura de animales salvajes, entre otros.<br>
 <p>Consecuencias:<br>
 <p>Al extingirse una especie de ave se ve alterado todo un ecosistema completo ya que las aves cumplen un papel muy importante dentro de un ecosistema y eso trae como consecuencia un desequilibrio en la biodiversidad,la falta de balance en la proliferacion de otras especies aun existentes ya sea plantas animales o ambos.<br>
-<a href="https://escuadron13.github.io/Proyecto/index.html#menu">Volver al Inicio</a><br>
+<a href="#menu">Volver al Inicio</a><br>
 <hr size="10px;"size="6px;"color="brown" align="center" width="100%">
 <a name="acciones"></a>
 <center><p style="color:green">Acciones para su conservacion</center>
@@ -119,7 +119,7 @@ En este contexto,Mexico es el hogar de 102 especies endemicas,es decir,que casi 
 <p>2.¿Te fue util la informacion?: <br>
 <input type= checkbox name=si> Si
 <input type= checkbox name=no> No
-<input type= checkbox name=mas o menos> Mas o menos
+<input type= checkbox name=masomenos> Mas o menos
 <br>
 <p>3._Del 1 al 10 ¿Cuanto te gusto? Tomando en cuenta que 10 es mucho
 <select name=opinion>
