--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ En este contexto,Mexico es el hogar de 102 especies endemicas,es decir,que casi 
 <a href="#menu">Volver al inicio</a>
 <hr size="10px;"size="6px;"color="green" align="center" width="100%">
 <p>¿Que te parecio nuestra pagina? Por favor dejanos tu opinion en la siguiente encuesta.<br>
-<form action="mailto:pericopter67@gmail.com" method="get">
+<form action="mailto:pericopter67@gmail.com" method="post" enctype="text/plain">
 <center><h1>Encuesta</h1>
 1._¿Que te parecio el contenido?
 <select name=opinion>
