--- a/index.html
+++ b/index.html
@@ -105,67 +105,67 @@ En este contexto,Mexico es el hogar de 102 especies endemicas,es decir,que casi 
 <hr size="10px;"size="6px;"color="green" align="center" width="100%">
 <p>¿Que te parecio nuestra pagina? Por favor dejanos tu opinion en la siguiente encuesta.<br>
 <form action="mailto:pericopter67@gmail.com" method="post" enctype="text/plain">
-<center><h1>Encuesta</h1>
-1._¿Que te parecio el contenido?
-<select name=opinion>
-<option> Exelente
-<option> Muy Bueno
-<option> Bueno
-<option> Regular
-<option> Suficiente
-<option> No Suficiente
+<center>
+<p>1._¿Que te parecio el contenido?<br>
+<select name=pregunta1>
+<option value="escoje" selected="selected">Escoje</option>
+<option value="exelente"> Exelente </option>
+<option value="muy bueno"> Muy Bueno </option>
+<option value="bueno"> Bueno </option>
+<option value="regular"> Regular </option>
+<option value="suficiente"> Suficiente </option>
+<option value="no suficiente"> No Suficiente </option>
 </select>
 <br>
 <p>2.¿Te fue util la informacion?: <br>
-<input type= checkbox name=si> Si
-<input type= checkbox name=no> No
-<input type= checkbox name=masomenos> Mas o menos
+<input type=radio name=si value="Si"/> Si
+<input type=radio name=no value="No"/> No
+<input type=radio name=masomenos value="MasoMenos"/> Mas o menos
 <br>
-<p>3._Del 1 al 10 ¿Cuanto te gusto? Tomando en cuenta que 10 es mucho
-<select name=opinion>
-<option> 1 
-<option> 2
-<option> 3
-<option> 4 
-<option> 5
-<option> 6
-<option> 7 
-<option> 8
-<option> 9
-<option> 10
+<p>3._Del 1 al 10 ¿Cuanto te gusto? Tomando en cuenta que 10 es mucho <br>
+<select name="cuanto te gusto">
+<option value="1"> 1  </option>
+<option value="2"> 2 </option>
+<option value="3"> 3 </option>
+<option value="4"> 4  </option>
+<option value="5"> 5 </option>
+<option value="6"> 6 </option>
+<option value="7"> 7 </option>
+<option value="8"> 8 </option>
+<option value="9"> 9 </option>
+<option value="10"> 10 </option>
 </select>
 <br>
-<p>4._¿Como te enteraste de la pagina?
-<select name=enterar>
-<option> Por un conocido
-<option> Me la recomendaron
-<option> En internet
-</select>
+<p>4._¿Como te enteraste de la pagina?<br>
+<select name="como te enteraste">
+<option value="conocido"> Por un conocido </option>
+<option value="recomendacion"> Me la recomendaron </option>
+<option value="internet"> En internet </option>
+</select> 
 <br>
 <p>5._Visualmente ¿Te llama la atencion? <br>
-<input type= checkbox name=mucho> Mucho
-<input type= checkbox name=poco> Poco
-<input type= checkbox name=muy poco> Muy Poco
-<input type= checkbox name=nada>Nada
+<input type="radio" name="mucho" value="mucho"/> Mucho
+<input type="radio" name="poco" value="poco"/> Poco
+<input type="radio" name="muy poco" value="muy poco"/> Muy Poco
+<input type="radio" name="nada" value="nada"/>Nada
 <br>
 <p>6._¿Te fue facil seguir el orden de la informacion? <br>
-<input type= checkbox name=si> Si
-<input type= checkbox name=no> No
-<input type= checkbox name=mas o menos> Mas o menos
+<input type="radio" name="yes" value="si"/> Si
+<input type="radio" name="nop" value="no"/> No
+<input type="radio" name="masomenos" value="mas o menos"/> Mas o menos
 <br>
 <p>7._¿Recomendarias esta pagina con tus conocidos? <br>
-<input type= checkbox name=si> Si
-<input type= checkbox name=no> No
-<input type= checkbox name=talvez> Talvez
+<input type="radio" name="4" value="si"/> Si
+<input type="radio" name="5" value="no"/> No
+<input type="radio" name="6" value="talvez"/> Talvez
 <br>
 <br>
 8._¿Por que?<br>
-<textarea name=porque rows?=5 cols= 40 wrap=virtual>
+<textarea name=porque rows=5 cols=40 wrap=virtual>
 </textarea>
 <br>
-<div class="button">
-        <button type="submit">Enviar</button>
-    </div>
+<input type=submit value="Enviar"> 
+<input type=reset value="Borrar"> 
 </form>
 </center>
 <center>
